opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-ftx"
bug-reports: "https://github.com/vbmithr/ocaml-ftx/issues"
dev-repo: "git+https://github.com/vbmithr/ocaml-ftx"
doc: "https://vbmithr.github.io/ocaml-ftx/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
run-test: [ "dune" "runtest" "-j" jobs "-p" name ]
depends: [
  "dune" {>= "1.11.4"}
  "uri" {>= "3.1.0"}
  "ptime" {>= "0.8.5"}
  "ezjsonm" {>= "1.1.0"}
  "checkseum" {>= "0.1.1"}
  "ftx" {= version}
  "fixtypes" {= version}
]
synopsis: "FTX API"
description: """
"""
