(library
 (name        ftx)
 (public_name ftx)
 (modules ftx)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   sexplib
   ptime
   ocplib-json-typed))

(library
 (name        ftx_rest)
 (public_name ftx-rest)
 (modules ftx_rest)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   uri
   ocplib-json-typed
   core
   fastrest))

(library
 (name        ftx_ws)
 (public_name ftx-ws)
 (modules ftx_ws)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   fixtypes
   ftx
   ptime
   uri
   checkseum))
