(test
 (name       test)
 (modules    test)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (libraries
  ftx-rest
  alcotest-async
  logs-async-reporter))

(executables
 (names ws leak)
 (public_names ftx-ws-cli ftx-leak-test)
 (modules ws leak)
 (package ftx-ws)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (libraries
   core
   async
   fastws-async
   logs-async-reporter
   fastrest
   ftx-rest
   ftx-ws))
