(test
 (name       test)
 (modules    test)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (package ftx-rest)
 (libraries
   ftx-rest
   alcotest-async))

(executables
 (names ws leak)
 (public_names ftx-ws-cli ftx-leak-test)
 (modules ws leak)
 (package ftx-bin)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (libraries
   core
   async
   yojson
   fastws-async
   logs-async-reporter
   fastrest
   ftx-rest
   ftx-ws))
